--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -500,14 +500,10 @@
                            <a href="<%= list.url %>" class="btn preview-api">preview</a>
                          </td>
                          <td>
-                           <a href="/approve-api?api=<%= list.name %>" class="btn btn-primary <% list.status=='approved' ? 'disabled' : '' %>">Approve</a>
+                           <a href="/approve-api?api=<%= list.name %>" class="btn btn-primary <% if(list.status == "approved"){ %> disabled <% } %>">Approve</a>
                          </td>
                          <td>
-<<<<<<< HEAD
-                           <a href="/delete-api?api=<%= list.name %>" class="btn btn-danger ">Disapprove</a>
-=======
                            <a href="/delete-api?api=<%= list.name %>" class="btn btn-danger">Delete</a>
->>>>>>> d2ec1bd610da64a851aebe9e36fb9439e0cf488d
                          </td>
                        </tr>
                        <% }) %>
@@ -532,14 +528,8 @@
                          <th>Name</th>
                          <th>Owner</th>
                          <th>Created On</th>
-<<<<<<< HEAD
-                         <th>Preview API</th>
-                         <th>Disapprove API</th>
-=======
                          <th>Preview</th>
-                         <th>Approve</th>
-                         <th>Disapprove</th>
->>>>>>> d2ec1bd610da64a851aebe9e36fb9439e0cf488d
+                         <th>Delete</th>
                        </tr>
                      </thead>
                      <tbody>
