--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/homepage/layers.png" type="image/x-icon" />
-    <title>About Us</title>
+    <title>MicroAPI | <%- pageTitle %></title>
     <!-- Bootstrap CSS -->
    <!-- Bootstrap -->
  <!-- bootstrap -->
