--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -7,7 +7,7 @@
 
   <link rel="shortcut icon" href="./images/homepage/layers.png" type="image/x-icon" />
 
-   
+
     <!-- Bootstrap -->
  <!-- bootstrap -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="./css/homepage/header.css" />
 
-    
-    <title> Blog</title>
+
+    <title>MicroAPI | <%- pageTitle %></title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
           <!-- include header.ejs -->
        <%- include('../templates/header')-%>
     </header>
-    
+
 <div class="container contact">
 	<div class="row">
 		<div class="col-md-3">
@@ -41,11 +41,21 @@
 			</div>
 		</div>
 		<div class="col-md-9">
-			 <form class="contact-form" action="/contact" method="POST"> 
+			 <form class="contact-form" action="/contact" method="POST">
+			  <% if(messages.error){ %>
+                  <div class="alert alert-danger">
+                      <%- messages.error %>
+                  </div>
+              <% } %>
+              <% if(messages.success){ %>
+                  <div class="alert alert-success">
+                      <%- messages.success %>
+                  </div>
+              <% } %>
 				<div class="form-group">
 				  <label class="control-label col" for="fname"> Name:</label>
-				  <div class="col-sm-10">          
-					<input type="text" class="form-control" id="fname" placeholder="Enter  Name" name="fname" required>
+				  <div class="col-sm-10">
+					<input type="text" class="form-control" id="name" placeholder="Enter  Name" name="fname" required>
 				  </div>
 				</div>
 				<div class="form-group">
@@ -60,7 +70,7 @@
 					<textarea class="form-control" rows="5" id="comment" name="comments" required></textarea>
 				  </div>
 				</div>
-				<div class="form-group"> 
+				<div class="form-group">
 				  <div class="col-sm-offset-2 col-sm-10">
 					<button type="submit" class="btn btn-default">Submit</button>
 				  </div>
