--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -197,6 +197,16 @@
 
      <div class="page-content">
        <div class="container">
+        <% if(messages.error){ %>
+            <div class="alert alert-danger">
+                <%- messages.error %>
+            </div>
+        <% } %>
+        <% if(messages.success){ %>
+            <div class="alert alert-success">
+                <%- messages.success %>
+            </div>
+        <% } %>
          <!--<div class="row">
            <div class="col-xl-4">
              <div class="card">
