--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -1,10 +1,7 @@
 <meta charset="utf-8" />
-<title>MicroAPI| <%= pageName %></title>
+<title>MicroAPI | <%- pageTitle %></title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta content="Premium Multipurpose Admin & Dashboard Template" name="description" />
-<meta content="Themesbrand" name="author" />
 <!-- App favicon -->
 <link rel="shortcut icon" href="./assets/images/favicon.ico">
-
 <!-- Bootstrap Css -->
 <link href="./css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" />
