fixed blog page

--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -21,7 +21,7 @@
                         <a class="nav-link" href="/contact">Contact</a>
                       </li>
                       <li class="nav-item abnormal pr-lg-4 ">
-                        <a href="https://blog.microapi.dev" target="_blank" class="nav-link">Blog</a>
+                        <a href="/blog" target="_blank" class="nav-link">Blog</a>
                       </li>
                       <li class="nav-item abnormal pr-lg-4">
 
